--- a/frontend/src/app/components/edit-consultation/edit-consultation.component.html
+++ b/frontend/src/app/components/edit-consultation/edit-consultation.component.html
@@ -34,13 +34,13 @@
 					<li class="nav-item">
 					    <a href="admin/dashboard" class="nav-link "><span>
                       <img src="/assets/icons/home.png" class="icon"></span>
-                      <span class="pcoded-mtext">Tableau de bord</span></a>
+                      <span class="pcoded-mtext mx-2">Tableau de bord</span></a>
 					</li>
                     
                <li class="nav-item pcoded-hasmenu">
                   <a href="/admin/listP" class="nav-link "><span>
                      <img src="/assets/icons/woman.png"  class="icon"></span>
-                     <span class="pcoded-mtext">Gérer les patientes</span></a>
+                     <span class="pcoded-mtext mx-2">Patientes</span></a>
                   <ul class="pcoded-submenu">
                       <li><a href="admin/listP" target="_blank">Liste des patientes</a></li>
                   </ul>
@@ -48,14 +48,14 @@
               <li class="nav-item pcoded-hasmenu">
                 <a href="/admin/recl" class="nav-link "><span>
                    <img src="/assets/icons/rendez.png" class="icon"></span>
-                   <span class="pcoded-mtext">Gérer les rendez-vous</span></a>
+                   <span class="pcoded-mtext mx-2">Rendez-vous</span></a>
                 <ul class="pcoded-submenu">
                     <li><a href="admin/recl" target="_blank">Consulter les rendez-vous</a></li>
                 </ul>
               <li class="nav-item pcoded-hasmenu">
                 <a href="/admin/listP" class="nav-link "><span>
                    <img src="assets/icons/medica.png"  class="icon" ></span>
-                   <span class="pcoded-mtext">Gérer les médicaments</span></a>
+                   <span class="pcoded-mtext mx-2">Médicaments</span></a>
                 <ul class="pcoded-submenu">
                     <li><a href="admin/listP" target="_blank">Liste des médicaments</a></li>
                 </ul>
@@ -63,7 +63,7 @@
             <li class="nav-item pcoded-hasmenu">
                 <a href="/admin/listP" class="nav-link "><span>
                    <img src="/assets/icons/analysee.png" class="icon"></span>
-                   <span class="pcoded-mtext">Gérer les analyses</span></a>
+                   <span class="pcoded-mtext mx-2">Analyses</span></a>
                 <ul class="pcoded-submenu">
                     <li><a href="admin/listP" target="_blank">Liste des analyses</a></li>
                 </ul>
@@ -71,7 +71,7 @@
         <li class="nav-item pcoded-hasmenu">
             <a href="/admin/recl" class="nav-link "><span>
                 <img src="/assets/icons/msg.png" class="icon"></span>
-               <span class="pcoded-mtext">Gérer les réclamations</span></a>
+               <span class="pcoded-mtext mx-2">Réclamations</span></a>
             <ul class="pcoded-submenu">
                 <li><a href="admin/recl" target="_blank">Consulter les réclamations</a></li>
             </ul>
@@ -124,7 +124,7 @@
 						</li>&nbsp;&nbsp;&nbsp;
 						<li>
 							<div class="dropdown drp-user">
-								<a href="/login" (click)="logOut()" id="logout"
+								<a href="/login"  id="logout"
                                      class="dropdown-toggle" data-toggle="dropdown">
 									<i class="feather icon-log-out"></i>
 								</a>
@@ -142,87 +142,51 @@
 <!-- [ Main Content ] start -->
 <section class="pcoded-main-container">
     <div class="pcoded-content">
-        <!-- [ breadcrumb ] start -->
-        <div class="page-header">
-            <div class="page-block container">
-                <div class="row align-items-center">
-                    <div class="col-md-12">
-                        <div class="page-header-title">
-                            <h5 class="m-b-10">Patiente</h5>
-                        </div>
-                        <ul class="breadcrumb">
-                            <li class="breadcrumb-item"><a href="/admin/dashboard"><i class="feather icon-home"></i></a></li>
-                            <li class="breadcrumb-item"><a href="/admin/listP">Gérer les patientes</a></li>
-                            <li class="breadcrumb-item"><a href="/admin/listP">Patiente</a></li>
-                        </ul>
-                    </div>
-                </div>
+      <!-- Breadcrumb start -->
+      <div class="page-header">
+        <div class="page-block container">
+          <div class="row align-items-center">
+            <div class="col-md-12">
+              <div class="page-header-title">
+                <h5 class="m-b-10">consultation</h5>
+              </div>
+              <ul class="breadcrumb">
+                <li class="breadcrumb-item"><a href="/admin/dashboard"><i class="feather icon-home"></i></a></li>
+                <li class="breadcrumb-item"><a href="/admin/listP">consultations</a></li>
+                <li class="breadcrumb-item"><a href="/admin/listP">Gérer les consultations</a></li>
+              </ul>
             </div>
+          </div>
         </div>
-        <!-- [ breadcrumb ] end -->
-        <!-- [ Main Content ] start -->
-		<div class="col-xl-12">
-			<div class="container p-3 my-3 border cont">
-				<div class="form-group mb-4">
-				   <div class="card-header col-lg-12"><h1 class="text-center text">Listes des patientes</h1></div>
-				   <div class="form-group has-search container col-md-6 mt-1">
-					<input type="text" class="form-control fa fa-search " placeholder="Search" [(ngModel)]="searchTerm" (input)="getAll(searchTerm)">
-				</div>
-				 </div><br>
-				<!-- table section -->
-				<div class="example-button-row pos mb-1"><a mat-raised-button routerLink="/create-carnet"><i class="fa fa-plus-circle p-1" aria-hidden="true"></i>Ajouter</a></div>
-				<table class="table align-middle mb-0 text-center table-responsive-lg" style="overflow-x:auto;">
-				   <thead class="bg countour border text-bold">
-					 <tr>
-					   <th>ID</th>
-					   <th>Nom</th>
-					   <th>Prénom</th>
-					   <th>Date de naissance</th>
-					   <th>Tel</th>
-					   <th>Actions</th>
-					   
-					 </tr>
-				   </thead>
-				   <tbody *ngFor="let patiente of patientes"  >
-					 <tr>
-						<td><p class="fw-normal mb-1">{{ patiente.userName}}</p></td>
-					   <td><p class="fw-normal mb-1">{{ patiente.nomP}}</p></td>
-					   <td><p class="fw-normal mb-1">{{ patiente.prenomP}}</p></td>
-                       <td><p class="fw-normal mb-1">{{ patiente.naissance}}</p></td>
-					   <td><p class="fw-normal mb-1">{{ patiente.tel}}</p></td>
-					   <td>
-						<button mat-button routerLink="/const-list/{{patiente._id}}">vuecon</button>
-						<button mat-button routerLink="/patient/{{patiente._id}}">vuecar</button>
-						<button mat-button routerLink="/create-carnet/{{patiente._id}}">carnet</button>
-						<button mat-button routerLink="/const/{{patiente._id}}"> consultation </button>
-						<button mat-button routerLink="/ord/{{patiente._id}}"> ord </button>
-						 <button type="button" class="btn btn-link btn-sm btn-rounded" title="supprimer"  (click)="deletepatiente(patiente)">
-						   <i class="fa fa-trash icon"></i>
-						 </button>
-					   </td>
-					 </tr>
-					 
-				   </tbody>
-				   
-				 </table>
-                 <mat-paginator [pageSizeOptions]="[5, 10, 20]"
-                 showFirstLastButtons
-                 aria-label="Select page of periodic elements">
-                </mat-paginator>
-			</div>
-</div>
-
-        <!-- [ Main Content ] end -->
+      </div>
+  
+      <div class="container-fluid px-1 py-5 mx-auto">
+        <div class="row d-flex justify-content-center">
+          <div class="col-xl-7 col-lg-8 col-md-9 col-11 text-center">
+            <div class="card">
+              <form class="form-card" [formGroup]="editForm" (ngSubmit)="onSubmit()">
+                <div class="row justify-content-between text-left">
+                    <div class="form-group col-sm-6 flex-column d-flex">
+                      <label class="form-control-label px-3">Annexe<span class="text-danger"> *</span></label>
+                      <input type="file" id="lname" name="lname" placeholder="Enter your last name" formControlName="annexe">
+                    </div>
+                    <div class="form-group col-sm-6 flex-column d-flex">
+                      <label class="form-control-label px-3">Date de consultation<span class="text-danger"> *</span></label>
+                     <input type="date" id="lname" name="lname" placeholder="Enter your last name" formControlName="timing">
+                    </div>
+                  </div>
+                  <label class="form-control-label px-3">Compte rendu de consultation<span class="text-danger"> *</span></label>
+                  <textarea class="form-control form-control-alternative" rows="3" placeholder="Write a large text here ..." formControlName="conclusion"></textarea>
+                <div class="form-group">
+                  <button class="formbold-btn" type="submit">Register</button>
+                </div>
+              </form>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
-</section>
-   <!-- Required Js -->
-   <script src="/assets/admin/js/vendor-all.min.js"></script>
-   <script src="/assets/admin/js/plugins/bootstrap.min.js"></script>
-   <script src="/assets/admin/js/ripple.js"></script>
-   <script src="/assets/admin/js/pcoded.min.js"></script>
-<!-- Apex Chart -->
-<script src="/assets/admin/js/plugins/apexcharts.min.js"></script>
-<!-- custom-chart js -->
-<script src="/assets/admin/js/pages/dashboard-main.js"></script>
+  </section>
+  
 </body>
 </html>
