--- a/frontend/src/app/components/about/about.component.html
+++ b/frontend/src/app/components/about/about.component.html
@@ -40,7 +40,7 @@
         <div class="container">
             <nav class="navbar navbar-expand-lg bg-white navbar-light py-3 py-lg-0">
                 <a href="/home" class="navbar-brand">
-                    <h1 class="m-0 text-uppercase "><i class="fa fa-clinic-medical me-2 ml-5"></i>DR. Nessrine machat</h1>
+                    <h1 class="m-0 text-uppercase "><img  src="https://cdn-icons-png.flaticon.com/512/122/122454.png?w=740&t=st=1683411200~exp=1683411800~hmac=f3c6a7b9b77b2d276ae7597c3008e292fb05c8d5b0bcfb94464ca60a3ecc8cd3" class="ico me-2 ml-5 mb-2">DR. Nessrine machat</h1>
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
                     <span class="navbar-toggler-icon"></span>
