--- a/frontend/src/app/components/appointment-list/appointment-list.component.html
+++ b/frontend/src/app/components/appointment-list/appointment-list.component.html
@@ -15,9 +15,9 @@
     <!-- vendor css -->
     <link rel="stylesheet" href="/assets/admin/css/style.css">
 </head>
-<body style="background-color: rgb(231, 111, 167);"  >
+<body style=" background: linear-gradient(80deg, rgba(240,111,167,1) 3%, rgba(130,177,233,1) 100%);" >
 	<!-- [ navigation menu ] start -->
-	<nav class="pcoded-navbar menu-dark ">
+    <nav class="pcoded-navbar" style="background:linear-gradient(80deg, rgba(130,177,233,1) 0%, rgba(240,111,167,1) 100%)">	
 		<div class="navbar-wrapper  ">
 			<div class="navbar-content scroll-div " >
 				<div >
