--- a/frontend/src/app/components/contact/contact.component.html
+++ b/frontend/src/app/components/contact/contact.component.html
@@ -12,20 +12,11 @@
             </div>
             <div class="col-md-6 text-center text-lg-end">
                 <div class="d-inline-flex align-items-center">
-                    <a class="text-body px-2" href="">
+                    <a class="text-body px-2" href="https://www.facebook.com/Cabinet-de-gyn%C3%A9cologie-obst%C3%A9trique-Dr-Machat-Nesrine-Ep-Khalfallah-113038777286823">
                         <i class="fab fa-facebook-f"></i>
                     </a>
-                    <a class="text-body px-2" href="">
-                        <i class="fab fa-twitter"></i>
-                    </a>
-                    <a class="text-body px-2" href="">
-                        <i class="fab fa-linkedin-in"></i>
-                    </a>
-                    <a class="text-body px-2" href="">
+                    <a class="text-body px-2" href="https://www.instagram.com/nesrine_machat_ep_khalfallah_/">
                         <i class="fab fa-instagram"></i>
-                    </a>
-                    <a class="text-body ps-2" href="">
-                        <i class="fab fa-youtube"></i>
                     </a>
                 </div>
             </div>
@@ -40,36 +31,29 @@
     <div class="container">
         <nav class="navbar navbar-expand-lg bg-white navbar-light py-3 py-lg-0">
             <a href="/home" class="navbar-brand">
-                <h1 class="m-0 text-uppercase "><i class="fa fa-clinic-medical me-2 ml-5"></i>DR. Nessrine machat</h1>
+                <h1 class="m-0 text-uppercase "><img  src="https://cdn-icons-png.flaticon.com/512/186/186693.png?w=740&t=st=1683390266~exp=1683390866~hmac=db54d3aa134c1edcc5bae0b9b116d7ba84b5f6f21a82c110ae60754fbabe0df8" class="ico me-2 ml-5 mb-2">DR. Nessrine machat</h1>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <div class="navbar-nav ms-auto py-0">
-                    <a href="/home" class="nav-item nav-link active">Accueil</a>
+                    <a href="/home" class="nav-item nav-link ">Accueil</a>
                     <a href="/about" class="nav-item nav-link">A Propos</a>
                     <a href="/service" class="nav-item nav-link">Services</a>
                     <div class="nav-item dropdown">
                         <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
                         <div class="dropdown-menu m-0">
-                            <a href="blog" class="dropdown-item">Blog Grid</a>
-                            <a href="detail" class="dropdown-item">Blog Detail</a>
-                            <a href="team" class="dropdown-item">The Team</a>
-                            <a href="testimonial" class="dropdown-item">Testimonial</a>
                             <a href="/appointment" class="dropdown-item">Appointment</a>
-                            <a href="search" class="dropdown-item">Search</a>
                         </div>
                     </div>
-                    <a href="/contact" class="nav-item nav-link">Contact</a>
+                    <a href="/contact" class="nav-item nav-link active">Contact</a>
                 </div>
             </div>
         </nav>
     </div>
 </div>
 <!-- Navbar End -->
-
-
 
     <!-- Contact Start -->
     <div class="container-fluid ">
