--- a/frontend/src/app/components/home/home.component.html
+++ b/frontend/src/app/components/home/home.component.html
@@ -1,83 +1,15 @@
 <body>
-    <!-- Topbar Start -->
-    <div class="container-fluid py-2 border-bottom d-none d-lg-block">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-6 text-center text-lg-start mb-2 mb-lg-0">
-                    <div class="d-inline-flex align-items-center">
-                        <a class="text-decoration-none text-body pe-3" href=""><i class="bi bi-telephone me-2"></i>+216 36 247 620 / +216 97 550 587 </a>
-                        <span class="text-body">|</span>
-                        <a class="text-decoration-none text-body px-3" href=""><i class="bi bi-envelope me-2"></i>machatnesrine081178@gmail.com</a>
-                    </div>
-                </div>
-                <div class="col-md-6 text-center text-lg-end">
-                    <div class="d-inline-flex align-items-center">
-                        <a class="text-body px-2" href="">
-                            <i class="fab fa-facebook-f"></i>
-                        </a>
-                        <a class="text-body px-2" href="">
-                            <i class="fab fa-twitter"></i>
-                        </a>
-                        <a class="text-body px-2" href="">
-                            <i class="fab fa-linkedin-in"></i>
-                        </a>
-                        <a class="text-body px-2" href="">
-                            <i class="fab fa-instagram"></i>
-                        </a>
-                        <a class="text-body ps-2" href="">
-                            <i class="fab fa-youtube"></i>
-                        </a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- Topbar End -->
+   <app-navbar></app-navbar>
 
-
-    <!-- Navbar Start -->
-    <div class="container-fluid sticky-top bg-white shadow-sm">
-        <div class="container">
-            <nav class="navbar navbar-expand-lg bg-white navbar-light py-3 py-lg-0">
-                <a href="/home" class="navbar-brand">
-                    <h1 class="m-0 text-uppercase "><i class="fa fa-clinic-medical me-2 ml-5"></i>DR. Nessrine machat</h1>
-                </a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarCollapse">
-                    <div class="navbar-nav ms-auto py-0">
-                        <a href="/home" class="nav-item nav-link active">Accueil</a>
-                        <a href="/about" class="nav-item nav-link">A Propos</a>
-                        <a href="/service" class="nav-item nav-link">Services</a>
-                        <div class="nav-item dropdown">
-                            <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
-                            <div class="dropdown-menu m-0">
-                                <a href="blog" class="dropdown-item">Blog Grid</a>
-                                <a href="detail" class="dropdown-item">Blog Detail</a>
-                                <a href="team" class="dropdown-item">The Team</a>
-                                <a href="testimonial" class="dropdown-item">Testimonial</a>
-                                <a href="/appointment" class="dropdown-item">Appointment</a>
-                                <a href="search" class="dropdown-item">Search</a>
-                            </div>
-                        </div>
-                        <a href="/contact" class="nav-item nav-link">Contact</a>
-                    </div>
-                </div>
-            </nav>
-        </div>
-    </div>
-    <!-- Navbar End -->
-
-
+    
     <!-- Hero Start -->
     <div class="container-fluid bg-primary py-5 mb-5 hero-header">
         <div class="container py-5">
             <div class="row justify-content-start">
-                <div class="col-lg-8 text-center text-lg-start">
-                    <h5 class="d-inline-block  text-uppercase border-bottom border-5" style="border-color: rgba(256, 256, 256, .3) !important;">Welcome To Medinova</h5>
-                    <h1 class="display-1 text-white mb-md-4">La meilleur solution pour vous et votre Santé </h1>
-                    <div class="pt-2">
+                <div class="col-lg-8 text-center text-lg-start mx-auto">
+                    <h5 class="d-inline-block  text-uppercase border-bottom border-5" style="border-color: rgba(256, 256, 256, .3) !important;">Bienvenue chez nous </h5>
+                    <h1 class="display-1 text-white mb-md-4 text-center ">La meilleur solution pour  votre Santé </h1>
+                    <div class="pt-2 ml-5 mx-auto text-center">
                         <a href="/about" class="btn btn-light rounded-pill py-md-3 px-md-5 mx-2">A propos de docteur</a>
                         <a href="/appointment" class="btn btn-outline-light rounded-pill py-md-3 px-md-5 mx-2">Prenez un Rendez-vous</a>
                     </div>
@@ -153,7 +85,7 @@
                         </div>
                         <h4 class="mb-3">Gynecologie-obstérique</h4>
                         <p class="m-0">traitement de  tous les problèmes inhérents au dépistage, au diagnostic, au traitement et à la prévention des maladies de l'appareil reproducteur de la femme.</p>
-                        <a class="btn btn-lg btn-primary rounded-pill" href="">
+                        <a class="btn btn-lg b rounded-pill" href="/service">
                             <i class="bi bi-arrow-right"></i>
                         </a>
                     </div>
@@ -165,7 +97,7 @@
                         </div>
                         <h4 class="mb-3">Echographie</h4>
                         <p class="m-0">l'échographie abdominale,l'échographie endo-vaginale, qui visualise mieux le col de l'utérus, l'utérus, et les ovaires.</p>
-                        <a class="btn btn-lg btn-primary rounded-pill" href="">
+                        <a class="btn btn-lg b rounded-pill" href="/service">
                             <i class="bi bi-arrow-right"></i>
                         </a>
                     </div>
@@ -177,7 +109,7 @@
                         </div>
                         <h4 class="mb-3">Les maladies du sein</h4>
                         <p class="m-0">Fibroadénome,Kyste,Changements fibrokystiques,Hyperplasie,Ecoulement du mamelon,Gynécomastie,Cancers du sein,Formes rares,Cancer inflammatoire,Calcifications mammaires</p>
-                        <a class="btn btn-lg btn-primary rounded-pill" href="">
+                        <a class="btn btn-lg b rounded-pill" href="/service">
                             <i class="bi bi-arrow-right"></i>
                         </a>
                     </div>
@@ -190,7 +122,7 @@
                         </div>
                         <h4 class="mb-3">Coelioscopie</h4>
                         <p class="m-0">La cœlioscopie est une technique de chirurgie permettant d’accéder à l’intérieur de l’abdomen par de petites incisions de la paroi abdominale. Cet acte se pratique pour diagnostiquer ou traiter certaines maladies, notamment gynécologiques ou digestives.</p>
-                        <a class="btn btn-lg btn-primary rounded-pill" href="">
+                        <a class="btn btn-lg b rounded-pill" href="/service">
                             <i class="bi bi-arrow-right"></i>
                         </a>
                     </div>
@@ -202,7 +134,7 @@
                         </div>
                         <h4 class="mb-3">Stérilité du couple</h4>
                         <p class="m-0">Incapacité pour un être vivant de se reproduire, de procréer, due à des troubles fonctionnels, à des lésions organiques des organes génitaux .</p>
-                        <a class="btn btn-lg btn-primary rounded-pill" href="">
+                        <a class="btn btn-lg b rounded-pill" href="/service">
                             <i class="bi bi-arrow-right"></i>
                         </a>
                     </div>
@@ -214,7 +146,7 @@
                         </div>
                         <h4 class="mb-3">ECG</h4>
                         <p class="m-0">L'électrocardiogramme ou ECG est un examen majeur en cardiologie qui permet d'effectuer des diagnostics précis, notamment celui de troubles du rythme, de l'infarctus ou de péricardite</p>
-                        <a class="btn btn-lg btn-primary rounded-pill" href="">
+                        <a class="btn btn-lg b rounded-pill" href="/service">
                             <i class="bi bi-arrow-right"></i>
                         </a>
                     </div>
