--- a/frontend/src/app/components/docteur/add-pat/add-pat.component.css
+++ b/frontend/src/app/components/docteur/add-pat/add-pat.component.css
@@ -1,8 +1,8 @@
 .example-container  {
-    margin-left: 8px;
+    margin-left: 10px;
   }
   .example-form {
-    min-width: 150px;
+    min-width: 400px;
     max-width: 500px;
     width: 50%;
   }
@@ -22,3 +22,31 @@
   mat-form-field {
     display: block;
   }
+  .pos{
+    text-align: right;
+}
+#logout{
+    color: #fafcfa;
+    font-size: 15px;
+}
+#tit{
+    font-size: 20px;
+}
+#tit1{
+    font-size: 14px;
+}
+.icon {
+    width: 30px;
+    height: 30px;
+    background-size: cover;
+    color: rgba(0, 0, 0, 0.675);
+
+  }
+  .ico {
+    width: 60px;
+    height: 60px;
+    background-size: cover;
+  }
+a{
+    color: white;
+}
