--- a/frontend/src/app/components/docteur/dashboard/dashboard.component.html
+++ b/frontend/src/app/components/docteur/dashboard/dashboard.component.html
@@ -15,10 +15,10 @@
     <!-- vendor css -->
     <link rel="stylesheet" href="/assets/admin/css/style.css">
 </head>
-<body style="background-color: rgb(231, 111, 167);"  >
+<body style=" background: linear-gradient(80deg, rgba(240,111,167,1) 3%, rgba(130,177,233,1) 100%);" >
 	<!-- [ navigation menu ] start -->
-	<nav class="pcoded-navbar menu-dark ">
-		<div class="navbar-wrapper  ">
+    <nav class="pcoded-navbar" style="background:linear-gradient(80deg, rgba(130,177,233,1) 0%, rgba(240,111,167,1) 100%)">	
+        	<div class="navbar-wrapper  ">
 			<div class="navbar-content scroll-div " >
 				<div >
 					<div class="main-menu-header">
@@ -34,13 +34,13 @@
 					<li class="nav-item">
 					    <a href="admin/dashboard" class="nav-link "><span>
                       <img src="/assets/icons/home.png" class="icon"></span>
-                      <span class="pcoded-mtext">Tableau de bord</span></a>
+                      <span class="pcoded-mtext mx-2">Tableau de bord</span></a>
 					</li>
                     
                <li class="nav-item pcoded-hasmenu">
                   <a href="/admin/listP" class="nav-link "><span>
                      <img src="/assets/icons/woman.png"  class="icon"></span>
-                     <span class="pcoded-mtext">Gérer les patientes</span></a>
+                     <span class="pcoded-mtext mx-2"> Patientes</span></a>
                   <ul class="pcoded-submenu">
                       <li><a href="admin/listP" target="_blank">Liste des patientes</a></li>
                   </ul>
@@ -48,14 +48,14 @@
               <li class="nav-item pcoded-hasmenu">
                 <a href="/admin/recl" class="nav-link "><span>
                    <img src="/assets/icons/rendez.png" class="icon"></span>
-                   <span class="pcoded-mtext">Gérer les rendez-vous</span></a>
+                   <span class="pcoded-mtext mx-2"> Rendez-vous</span></a>
                 <ul class="pcoded-submenu">
                     <li><a href="admin/listapp" target="_blank">Consulter les rendez-vous</a></li>
                 </ul>
               <li class="nav-item pcoded-hasmenu">
                 <a href="/admin/listP" class="nav-link "><span>
                    <img src="assets/icons/medica.png"  class="icon" ></span>
-                   <span class="pcoded-mtext">Gérer les médicaments</span></a>
+                   <span class="pcoded-mtext mx-2"> Médicaments</span></a>
                 <ul class="pcoded-submenu">
                     <li><a href="admin/listP" target="_blank">Liste des médicaments</a></li>
                 </ul>
@@ -63,7 +63,7 @@
             <li class="nav-item pcoded-hasmenu">
                 <a href="/admin/listP" class="nav-link "><span>
                    <img src="/assets/icons/analysee.png" class="icon"></span>
-                   <span class="pcoded-mtext">Gérer les analyses</span></a>
+                   <span class="pcoded-mtext mx-2"> Analyses</span></a>
                 <ul class="pcoded-submenu">
                     <li><a href="admin/listP" target="_blank">Liste des analyses</a></li>
                 </ul>
@@ -71,7 +71,7 @@
         <li class="nav-item pcoded-hasmenu">
             <a href="/admin/listR" class="nav-link "><span>
                 <img src="/assets/icons/msg.png" class="icon"></span>
-               <span class="pcoded-mtext">Gérer les réclamations</span></a>
+               <span class="pcoded-mtext mx-2"> Réclamations</span></a>
             <ul class="pcoded-submenu">
                 <li><a href="admin/listR" target="_blank">Consulter les réclamations</a></li>
             </ul>
@@ -167,7 +167,7 @@
                     <div class="card-body ">
                         <div class="row align-items-center ">
                             <div class="col-8">
-                                <h1 class="text-c-green">{{ nbrP }}</h1>
+                                <h1 class="text-c-green color">{{ nbrP }}</h1>
                                 <h3 class="text-muted m-b-0">Patientes</h3>
                             </div>
                             <div class="col-4 text-right">
@@ -175,7 +175,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="card-footer bg-c-green">
+                    <div class="card-footer bg-c-green" style="background: rgba(243,131,180,100);">
                         <div class="row align-items-center">
                             <div class="col-md-9">
                                 <a href="admin/listP" class="text-white m-b-0">Consulter les patientes</a>
@@ -192,7 +192,7 @@
                     <div class="card-body">
                         <div class="row align-items-center">
                             <div class="col-md-8">
-                                <h1 class="text-c-green">{{ nbrP}}</h1>
+                                <h1 class="text-c-green color ">{{nbrA}}</h1>
                                 <h3 class="text-muted m-b-0">rendez-vous</h3>
                             </div>
                             <div class="col-4 text-right">
@@ -200,7 +200,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="card-footer bg-c-green">
+                    <div class="card-footer bg-c-green" style="background: rgba(243,131,180,100);">
                         <div class="row align-items-center">
                             <div class="col-md-9">
                                 <a href="admin/listapp" class="text-white m-b-0">Consulter les rendez-vous</a>
@@ -218,15 +218,15 @@
                         <div class="card-body ">
                             <div class="row align-items-center ">
                                 <div class="col-8">
-                                    <h1 class="text-c-green">{{ nbrP }}</h1>
-                                    <h3 class="text-muted m-b-0">Réclamations</h3>
+                                    <h1 class="text-c-green color">{{ nbrM }}</h1>
+                                    <h3 class="text-muted m-b-0">Messages</h3>
                                 </div>
                                 <div class="col-4 text-right">
                                         <img  class="ico" src="/assets/icons/msg.png" >
                                 </div>
                             </div>
                         </div>
-                        <div class="card-footer bg-c-green">
+                        <div class="card-footer bg-c-green" style="background: rgba(243,131,180,100);">
                             <div class="row align-items-center">
                                 <div class="col-md-9">
                                     <a href="admin/listR" class="text-white m-b-0">Consulter les réclamations</a>
@@ -243,7 +243,7 @@
                         <div class="card-body">
                             <div class="row align-items-center">
                                 <div class="col-md-8">
-                                    <h1 class="text-c-green">{{ nbrP}}</h1>
+                                    <h1 class="text-c-green color">{{ nbrAr}}</h1>
                                     <h3 class="text-muted m-b-0">Articles</h3>
                                 </div>
                                 <div class="col-4 text-right ">
@@ -251,7 +251,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="card-footer bg-c-green">
+                        <div class="card-footer bg-c-green" style="background: rgba(243,131,180,100);">
                             <div class="row align-items-center">
                                 <div class="col-md-9">
                                     <a href="/blog" class="text-white m-b-0">Consulter les articles</a>
