--- a/frontend/src/app/components/footer/footer.component.html
+++ b/frontend/src/app/components/footer/footer.component.html
@@ -1,80 +1,48 @@
+<footer class="footer-20192">
+  <div class="site-section">
+    <div class="container">
 
-<footer style="background-color:#f39999">
-    <div class="container p-4">
+      
       <div class="row">
-        <div class="col-lg-3 col-md-6 mb-4">
-          <h5 class="mb-3" style="letter-spacing: 2px; color: #f6f6f6;">shopping online</h5>
-          <ul class="list-unstyled mb-0">
-            <li class="mb-1">
-              <a href="#!" style="color: #4f4f4f;">frequently asked questions</a>
-            </li>
-            <li class="mb-1">
-              <a href="#!" style="color: #4f4f4f;">delivery</a>
-            </li>
-            <li class="mb-1">
-              <a href="#!" style="color: #4f4f4f;">pricing</a>
-            </li>
-            <li>
-              <a href="#!" style="color: #4f4f4f;">where we deliver?</a>
-            </li>
+
+        <div class="col-sm">
+          <a href="#" class="footer-logo">Nesrine_machat_ep_khalfallah</a>
+          <p class="copyright">
+            <small>  ©   {{ currentYear }} Copyright: H&I </small>
+          </p>
+        </div>
+        <div class="col-sm">
+          <h3>Customers</h3>
+          <ul class="list-unstyled links">
+            <li><a href="#">Buyer</a></li>
+            <li><a href="#">Supplier</a></li>
           </ul>
         </div>
-        <div class="col-lg-3 col-md-6 mb-4">
-          <h5 class="mb-3" style="letter-spacing: 2px; color: #ffffff;">git cards</h5>
-          <ul class="list-unstyled mb-0">
-            <li class="mb-1">
-              <a href="#!" style="color: #4f4f4f;">frequently asked questions</a>
-            </li>
-            <li class="mb-1">
-              <a href="#!" style="color: #4f4f4f;">delivery and payment</a>
-            </li>
-            <li class="mb-1">
-              <a href="#!" style="color: #4f4f4f;">activate the card</a>
-            </li>
-            <li>
-              <a href="#!" style="color: #4f4f4f;">rules</a>
-            </li>
+        <div class="col-sm">
+          <h3>Company</h3>
+          <ul class="list-unstyled links">
+            <li><a href="#">About us</a></li>
+            <li><a href="#">Careers</a></li>
+            <li><a href="#">Contact us</a></li>
           </ul>
         </div>
-        <div class="col-lg-3 col-md-6 mb-4">
-          <h5 class="mb-3" style="letter-spacing: 2px; color: #ffffff;">company</h5>
-          <ul class="list-unstyled mb-0">
-            <li class="mb-1">
-              <a href="#!" style="color: #4f4f4f;">buy a gift card</a>
-            </li>
-            <li class="mb-1">
-              <a href="#!" style="color: #4f4f4f;">history</a>
-            </li>
-            <li class="mb-1">
-              <a href="#!" style="color: #4f4f4f;">return</a>
-            </li>
-            <li>
-              <a href="#!" style="color: #4f4f4f;">contact</a>
-            </li>
+        <div class="col-sm">
+          <h3>Further Information</h3>
+          <ul class="list-unstyled links">
+            <li><a href="#">Terms &amp; Conditions</a></li>
+            <li><a href="#">Privacy Policy</a></li>
           </ul>
         </div>
-        <div class="col-lg-3 col-md-6 mb-4">
-          <h5 class="mb-3" style="letter-spacing: 2px; color: #ffffff;">diamond club</h5>
-          <ul class="list-unstyled mb-0">
-            <li class="mb-1">
-              <a href="#!" style="color: #4f4f4f;">registration</a>
-            </li>
-            <li class="mb-1">
-              <a href="#!" style="color: #4f4f4f;">application</a>
-            </li>
-            <li class="mb-1">
-              <a href="#!" style="color: #4f4f4f;">about program</a>
-            </li>
-            <li>
-              <a href="#!" style="color: #4f4f4f;">rules</a>
-            </li>
+        <div class="col-md-3">
+          <h3>Follow us</h3>
+          <ul class="list-unstyled social ">
+            <li><a href="#"><span class="icon-facebook"></span></a></li>
+            <li><a href="#"><span class="icon-medium"></span></a></li>
+            <li><a href="#"><span class="icon-paper-plane"></span></a></li>
           </ul>
         </div>
+        
       </div>
     </div>
-    <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
-      ©   {{ currentYear }} Copyright: 
-      <a class="text-dark" href="/home">Nessrine Machat</a>
-    </div>
-    <!-- Copyright -->
-  </footer>
+  </div>
+</footer>
