--- a/frontend/src/app/components/navbar/navbar.component.html
+++ b/frontend/src/app/components/navbar/navbar.component.html
@@ -1,30 +1,21 @@
- <!-- Topbar Start -->
- <div class="container-fluid py-2 border-bottom d-none d-lg-block">
+  <!-- Topbar Start -->
+  <div class="container-fluid py-2 border-bottom d-none d-lg-block">
     <div class="container">
         <div class="row">
             <div class="col-md-6 text-center text-lg-start mb-2 mb-lg-0">
                 <div class="d-inline-flex align-items-center">
-                    <a class="text-decoration-none text-body pe-3" href=""><i class="bi bi-telephone me-2"></i>+216 36 247 620 / +216 97 550 587 </a>
-                    <span class="text-body">|</span>
-                    <a class="text-decoration-none text-body px-3" href=""><i class="bi bi-envelope me-2"></i>machatnesrine081178@gmail.com</a>
+                    <a href="tel:+216 36 247 620" class="text-black text-decoration-none">+216 36 247 620 </a><a href="tel:+216 97 550 587" class="text-black text-decoration-none"> / +216 97 550 587 </a>
+                    <span class="text-body ">|</span>
+                    <a class="text-decoration-none text-body px-2" href="mailto:machatnesrine081178@gmail.com"><i class="bi bi-envelope me-2"></i>machatnesrine081178@gmail.com</a>
                 </div>
             </div>
             <div class="col-md-6 text-center text-lg-end">
                 <div class="d-inline-flex align-items-center">
-                    <a class="text-body px-2" href="">
+                    <a class="text-body px-2" href="https://www.facebook.com/Cabinet-de-gyn%C3%A9cologie-obst%C3%A9trique-Dr-Machat-Nesrine-Ep-Khalfallah-113038777286823">
                         <i class="fab fa-facebook-f"></i>
                     </a>
-                    <a class="text-body px-2" href="">
-                        <i class="fab fa-twitter"></i>
-                    </a>
-                    <a class="text-body px-2" href="">
-                        <i class="fab fa-linkedin-in"></i>
-                    </a>
-                    <a class="text-body px-2" href="">
+                    <a class="text-body px-2" href="https://www.instagram.com/nesrine_machat_ep_khalfallah_/">
                         <i class="fab fa-instagram"></i>
-                    </a>
-                    <a class="text-body ps-2" href="">
-                        <i class="fab fa-youtube"></i>
                     </a>
                 </div>
             </div>
@@ -39,25 +30,20 @@
     <div class="container">
         <nav class="navbar navbar-expand-lg bg-white navbar-light py-3 py-lg-0">
             <a href="/home" class="navbar-brand">
-                <h1 class="m-0 text-uppercase "><i class="fa fa-clinic-medical me-2 ml-5"></i>DR.Nessrine machat</h1>
+                <h1 class="m-0 text-uppercase "><img  src="https://cdn-icons-png.flaticon.com/512/122/122454.png?w=740&t=st=1683411200~exp=1683411800~hmac=f3c6a7b9b77b2d276ae7597c3008e292fb05c8d5b0bcfb94464ca60a3ecc8cd3" class="ico me-2 ml-5 mb-2">DR. Nessrine machat</h1>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <div class="navbar-nav ms-auto py-0">
-                    <a href="/home" class="nav-item nav-link ">Accueil</a>
+                    <a href="/home" class="nav-item nav-link active">Accueil</a>
                     <a href="/about" class="nav-item nav-link">A Propos</a>
                     <a href="/service" class="nav-item nav-link">Services</a>
                     <div class="nav-item dropdown">
                         <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
                         <div class="dropdown-menu m-0">
-                            <a href="blog" class="dropdown-item">Blog Grid</a>
-                            <a href="detail" class="dropdown-item">Blog Detail</a>
-                            <a href="team" class="dropdown-item">The Team</a>
-                            <a href="testimonial" class="dropdown-item">Testimonial</a>
                             <a href="/appointment" class="dropdown-item">Appointment</a>
-                            <a href="search" class="dropdown-item">Search</a>
                         </div>
                     </div>
                     <a href="/contact" class="nav-item nav-link">Contact</a>
