--- a/frontend/src/app/components/reclamation-list/reclamation-list.component.html
+++ b/frontend/src/app/components/reclamation-list/reclamation-list.component.html
@@ -15,9 +15,9 @@
     <!-- vendor css -->
     <link rel="stylesheet" href="/assets/admin/css/style.css">
 </head>
-<body style="background-color: rgb(231, 111, 167);"  >
+<body style=" background: linear-gradient(80deg, rgba(240,111,167,1) 3%, rgba(130,177,233,1) 100%);" >
 	<!-- [ navigation menu ] start -->
-	<nav class="pcoded-navbar menu-dark ">
+    <nav class="pcoded-navbar" style="background:linear-gradient(80deg, rgba(130,177,233,1) 0%, rgba(240,111,167,1) 100%)">	
 		<div class="navbar-wrapper  ">
 			<div class="navbar-content scroll-div " >
 				<div >
@@ -34,13 +34,13 @@
 					<li class="nav-item">
 					    <a href="admin/dashboard" class="nav-link "><span>
                       <img src="/assets/icons/home.png" class="icon"></span>
-                      <span class="pcoded-mtext">Tableau de bord</span></a>
+                      <span class="pcoded-mtext"> Tableau de bord</span></a>
 					</li>
                     
                <li class="nav-item pcoded-hasmenu">
                   <a href="/admin/listP" class="nav-link "><span>
                      <img src="/assets/icons/woman.png"  class="icon"></span>
-                     <span class="pcoded-mtext">Gérer les patientes</span></a>
+                     <span class="pcoded-mtext mx-2"> Patientes</span></a>
                   <ul class="pcoded-submenu">
                       <li><a href="admin/listP" target="_blank">Liste des patientes</a></li>
                   </ul>
@@ -48,14 +48,14 @@
               <li class="nav-item pcoded-hasmenu">
                 <a href="/admin/recl" class="nav-link "><span>
                    <img src="/assets/icons/rendez.png" class="icon"></span>
-                   <span class="pcoded-mtext">Gérer les rendez-vous</span></a>
+                   <span class="pcoded-mtext mx-2"> Rendez-vous</span></a>
                 <ul class="pcoded-submenu">
                     <li><a href="admin/recl" target="_blank">Consulter les rendez-vous</a></li>
                 </ul>
               <li class="nav-item pcoded-hasmenu">
                 <a href="/admin/listP" class="nav-link "><span>
                    <img src="assets/icons/medica.png"  class="icon" ></span>
-                   <span class="pcoded-mtext">Gérer les médicaments</span></a>
+                   <span class="pcoded-mtext mx-2"> Médicaments</span></a>
                 <ul class="pcoded-submenu">
                     <li><a href="admin/listP" target="_blank">Liste des médicaments</a></li>
                 </ul>
@@ -63,7 +63,7 @@
             <li class="nav-item pcoded-hasmenu">
                 <a href="/admin/listP" class="nav-link "><span>
                    <img src="/assets/icons/analysee.png" class="icon"></span>
-                   <span class="pcoded-mtext">Gérer les analyses</span></a>
+                   <span class="pcoded-mtext mx-2"> Analyses</span></a>
                 <ul class="pcoded-submenu">
                     <li><a href="admin/listP" target="_blank">Liste des analyses</a></li>
                 </ul>
@@ -71,7 +71,7 @@
         <li class="nav-item pcoded-hasmenu">
             <a href="/admin/recl" class="nav-link "><span>
                 <img src="/assets/icons/msg.png" class="icon"></span>
-               <span class="pcoded-mtext">Gérer les réclamations</span></a>
+               <span class="pcoded-mtext mx-2"> Réclamations</span></a>
             <ul class="pcoded-submenu">
                 <li><a href="admin/recl" target="_blank">Consulter les réclamations</a></li>
             </ul>
@@ -152,7 +152,7 @@
                         </div>
                         <ul class="breadcrumb">
                             <li class="breadcrumb-item"><a href="/admin/dashboard"><i class="feather icon-home"></i></a></li>
-                            <li class="breadcrumb-item"><a href="/admin/listP">Gérer les réclamations</a></li>
+                            <li class="breadcrumb-item"><a href="/admin/listP mx-2"> réclamations</a></li>
                             <li class="breadcrumb-item"><a href="/admin/listP">Réclamations</a></li>
                         </ul>
                     </div>
@@ -184,7 +184,7 @@
 				   <tbody *ngFor="let message of messages" >
 					 <tr>
 						<td><p class="fw-normal mb-1">{{ message.nom}}</p></td>
-					   <td><p class="fw-normal mb-1">{{ message.email}}</p></td>
+						<td><a class="text-decoration-none text-body px-2" href="mailto: {{ message.email}}">{{message.email}}</a></td>
 					   <td><p class="fw-normal mb-1">{{ message.subject}}</p></td>
                        <td><p class="fw-normal mb-1">{{ message.mess}}</p></td>
 
