--- a/frontend/src/app/components/appointment/appointment.component.html
+++ b/frontend/src/app/components/appointment/appointment.component.html
@@ -18,6 +18,12 @@
 								</div>
 								<div class="col-md-6">
 									<div class="form-group">
+										<span class="form-label">Prenom</span>
+										<input placeholder="nom" class="form-control" type="text" id="prenom" name="prenom" [(ngModel)]="newAppointment.prenom" required>
+									</div>
+								</div>
+								<div class="col-md-12">
+									<div class="form-group">
 										<span class="form-label">Address mail</span>
 										<input placeholder="exemple@exemple.com" class="form-control" type="email" id="Address" name="Address" [(ngModel)]="newAppointment.email" required>
 									</div>
