--- a/frontend/src/app/components/appointment-list/appointment-list.component.html
+++ b/frontend/src/app/components/appointment-list/appointment-list.component.html
@@ -18,7 +18,7 @@
 <body style=" background: linear-gradient(80deg, rgba(240,111,167,1) 3%, rgba(130,177,233,1) 100%);" >
 	<!-- [ navigation menu ] start -->
     <nav class="pcoded-navbar" style="background:linear-gradient(80deg, rgba(130,177,233,1) 0%, rgba(240,111,167,1) 100%)">	
-		<div class="navbar-wrapper  ">
+        	<div class="navbar-wrapper  ">
 			<div class="navbar-content scroll-div " >
 				<div >
 					<div class="main-menu-header">
@@ -34,50 +34,34 @@
 					<li class="nav-item">
 					    <a href="admin/dashboard" class="nav-link "><span>
                       <img src="/assets/icons/home.png" class="icon"></span>
-                      <span class="pcoded-mtext">Tableau de bord</span></a>
+                      <span class="pcoded-mtext mx-2">Tableau de bord</span></a>
 					</li>
                     
                <li class="nav-item pcoded-hasmenu">
                   <a href="/admin/listP" class="nav-link "><span>
                      <img src="/assets/icons/woman.png"  class="icon"></span>
-                     <span class="pcoded-mtext">Gérer les patientes</span></a>
+                     <span class="pcoded-mtext mx-2"> Patientes</span></a>
                   <ul class="pcoded-submenu">
                       <li><a href="admin/listP" target="_blank">Liste des patientes</a></li>
                   </ul>
               </li>
               <li class="nav-item pcoded-hasmenu">
-                <a href="/admin/recl" class="nav-link "><span>
+                <a href="admin/listapp" class="nav-link "><span>
                    <img src="/assets/icons/rendez.png" class="icon"></span>
-                   <span class="pcoded-mtext">Gérer les rendez-vous</span></a>
+                   <span class="pcoded-mtext mx-2"> Rendez-vous</span></a>
                 <ul class="pcoded-submenu">
-                    <li><a href="admin/recl" target="_blank">Consulter les rendez-vous</a></li>
+                    <li><a href="admin/listapp" target="_blank">Consulter les rendez-vous</a></li>
                 </ul>
-              <li class="nav-item pcoded-hasmenu">
-                <a href="/admin/listP" class="nav-link "><span>
-                   <img src="assets/icons/medica.png"  class="icon" ></span>
-                   <span class="pcoded-mtext">Gérer les médicaments</span></a>
-                <ul class="pcoded-submenu">
-                    <li><a href="admin/listP" target="_blank">Liste des médicaments</a></li>
-                </ul>
-            </li>
-            <li class="nav-item pcoded-hasmenu">
-                <a href="/admin/listP" class="nav-link "><span>
-                   <img src="/assets/icons/analysee.png" class="icon"></span>
-                   <span class="pcoded-mtext">Gérer les analyses</span></a>
-                <ul class="pcoded-submenu">
-                    <li><a href="admin/listP" target="_blank">Liste des analyses</a></li>
-                </ul>
-            </li>
         <li class="nav-item pcoded-hasmenu">
-            <a href="/admin/recl" class="nav-link "><span>
+            <a href="admin/listR" class="nav-link "><span>
                 <img src="/assets/icons/msg.png" class="icon"></span>
-               <span class="pcoded-mtext">Gérer les réclamations</span></a>
+               <span class="pcoded-mtext mx-2"> Messages</span></a>
             <ul class="pcoded-submenu">
-                <li><a href="admin/recl" target="_blank">Consulter les réclamations</a></li>
+                <li><a href="admin/listR" target="_blank">Consulter les réclamations</a></li>
             </ul>
         </li>
         <br><br><br>
-		<li><a href="/login" ><i class="fa fa-sign-out black_color text-bold"></i> 
+		<li><a href="/login" (click)="logOut()"><i class="fa fa-sign-out black_color text-bold"></i> 
 			<span>Déconnexion</span></a></li>		
     </ul>
 			</div>
@@ -124,7 +108,7 @@
 						</li>&nbsp;&nbsp;&nbsp;
 						<li>
 							<div class="dropdown drp-user">
-								<a href="/login" id="logout"
+								<a href="/login" (click)="logOut()" id="logout"
                                      class="dropdown-toggle" data-toggle="dropdown">
 									<i class="feather icon-log-out"></i>
 								</a>
@@ -174,6 +158,7 @@
 				   <thead class="bg countour border text-bold">
 					 <tr>
 					   <th>Nom</th>
+					   <th>Prenom</th>
 					   <th>Email</th>
 					   <th>Telephone</th>
 					   <th>Date</th>
@@ -185,6 +170,7 @@
 				   <tbody *ngFor="let appointment of appointmentsList"  >
 					 <tr>
 						<td><p class="fw-normal mb-1">{{ appointment.nom }}</p></td>
+						<td><p class="fw-normal mb-1">{{ appointment.prenom }}</p></td>
 					   <td><p class="fw-normal mb-1">{{ appointment.email }}</p></td>
 					   <td><p class="fw-normal mb-1">{{ appointment.numt }}</p></td>
                        <td><p class="fw-normal mb-1">{{ appointment.date }}</p></td>
