--- a/frontend/src/app/components/carnet-create/carnet-create.component.html
+++ b/frontend/src/app/components/carnet-create/carnet-create.component.html
@@ -1,9 +1,156 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <title>PFE</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0, minimal-ui">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="description" content="" />
+    <meta name="keywords" content="">
+    <meta name="author" content="Phoenixcoded" />
+    <!-- Favicon icon -->
 
+    
+    <link rel="icon" href="/assets/admin/images/favicon.ico" type="image/x-icon">
+    <!-- vendor css -->
+    <link rel="stylesheet" href="/assets/admin/css/style.css">
+</head>
+<body style=" background: linear-gradient(80deg, rgba(240,111,167,1) 3%, rgba(130,177,233,1) 100%);" >
+	<!-- [ navigation menu ] start -->
+    <nav class="pcoded-navbar" style="background:linear-gradient(80deg, rgba(130,177,233,1) 0%, rgba(240,111,167,1) 100%)">	
+        	<div class="navbar-wrapper  ">
+			<div class="navbar-content scroll-div " >
+				<div >
+					<div class="main-menu-header">
+						<img class="img-radius" src="/assets/img/gyne.png" alt="User-Profile-Image">
+						<div class="user-details">
+							<div id="more-details">Docteur Nesrine Machat <i class="fa fa-caret-down"></i>
+                            </div>
+						</div>
+					</div>
+				</div>
+<br><br>
+				<ul class="nav pcoded-inner-navbar contain "id="tit1">
+					<li class="nav-item">
+					    <a href="admin/dashboard" class="nav-link "><span>
+                      <img src="/assets/icons/home.png" class="icon"></span>
+                      <span class="pcoded-mtext mx-2">Tableau de bord</span></a>
+					</li>
+                    
+               <li class="nav-item pcoded-hasmenu">
+                  <a href="/admin/listP" class="nav-link "><span>
+                     <img src="/assets/icons/woman.png"  class="icon"></span>
+                     <span class="pcoded-mtext mx-2"> Patientes</span></a>
+                  <ul class="pcoded-submenu">
+                      <li><a href="admin/listP" target="_blank">Liste des patientes</a></li>
+                  </ul>
+              </li>
+              <li class="nav-item pcoded-hasmenu">
+                <a href="/admin/recl" class="nav-link "><span>
+                   <img src="/assets/icons/rendez.png" class="icon"></span>
+                   <span class="pcoded-mtext mx-2"> Rendez-vous</span></a>
+                <ul class="pcoded-submenu">
+                    <li><a href="admin/listapp" target="_blank">Consulter les rendez-vous</a></li>
+                </ul>
+        <li class="nav-item pcoded-hasmenu">
+            <a href="/admin/listR" class="nav-link "><span>
+                <img src="/assets/icons/msg.png" class="icon"></span>
+               <span class="pcoded-mtext mx-2"> Réclamations</span></a>
+            <ul class="pcoded-submenu">
+                <li><a href="admin/listR" target="_blank">Consulter les réclamations</a></li>
+            </ul>
+        </li>
+        <br><br><br>
+		<li><a href="/login"><i class="fa fa-sign-out black_color text-bold"></i> 
+			<span>Déconnexion</span></a></li>		
+    </ul>
+			</div>
+		</div>
+	</nav>
+	<!-- [ navigation menu ] end -->
+	<!-- [ Header ] start -->
+	<header class="navbar pcoded-header navbar-expand-lg navbar-light header-blue">
+		<div class="m-header">
+					<a class="mobile-menu" id="mobile-collapse" href="/admin/dashboard"><span></span></a>
+					<a href="#!" class="b-brand">
+						<!-- ========   change your logo hear   ============ -->
+						<img src="/assets/admin/images/logo-icon.png" alt="" class="logo-thumb">
+					</a>
+					<a href="#!" class="mob-toggler" >
+						<i class="feather icon-more-vertical"></i>
+					</a>
+				</div>
+				<div class="collapse navbar-collapse">
+					<ul class="navbar-nav mr-auto">
+                        
+						<li class="nav-item" id="logout">
+							<a href="#!" class="pop-search"><i class="feather icon-search"></i></a>
+							<div class="search-bar">
+								<input type="text" id="m-search" class="form-control"  
+                                placeholder="Rechercher...">
+								<button type="button" class="close" aria-label="Close">
+									<span aria-hidden="true">&times;</span>
+								</button>
+							</div>
+						</li>
+					</ul>
+					<ul class="navbar-nav ml-auto">
+                      
+						<li>
+							<div class="dropdown" id="logout">
+								<a class="dropdown-toggle" href="#" data-toggle="dropdown"><i class="icon feather icon-bell"></i></a>
+								<div class="dropdown-menu dropdown-menu-right notification">
+									<div class="noti-head" >
+										<h6 class="d-inline-block m-b-0">Notifications</h6>
+									</div>
+								</div>
+							</div>
+						</li>&nbsp;&nbsp;&nbsp;
+						<li>
+							<div class="dropdown drp-user">
+								<a href="/login" id="logout"
+                                     class="dropdown-toggle" data-toggle="dropdown">
+									<i class="feather icon-log-out"></i>
+								</a>
+							</div>
+						</li>
+                        <li>
+                            
+                        </li>
+					</ul>
+				</div>
+				
+			
+	</header>
+	<!-- [ Header ] end -->
+<!-- [ Main Content ] start -->
+<div class="pcoded-main-container">
+    <div class="pcoded-content">
+        <!-- [ breadcrumb ] start -->
+        <div class="page-header container">
+            <div class="page-block ">
+                <div class="row align-items-center">
+                    <div class="col-md-16">
+                        <div class="page-header-title">
+                            <h5 class="m-b-10" id="tit">consultation</h5>
+                        </div>
+                        <ul class="breadcrumb" id="tit">
+                            <li class="breadcrumb-item"><a href="admin/dashboard"><i class="feather icon-home"></i></a></li>
+                            <li class="breadcrumb-item"><a href="admin/dashboard">Creer une consultation</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            
+        </div>
+        <!-- [ breadcrumb ] end -->
+        <!-- [ Main Content ] start -->
 <div class="container-fluid px-1 py-5 mx-auto">
   <div class="row d-flex justify-content-center">
       <div class="col-xl-7 col-lg-8 col-md-9 col-11 text-center">
           <div class="card">
               <form class="form-card" [formGroup]="carnetForm" (ngSubmit)="onSubmit()" >
+                <h1> Carnet pour {{patient.nomP}} {{patient.prenomP}}</h1> 
             <div class="row justify-content-between text-left">
                   <div class="row justify-content-between text-left">
                       <div class="form-group col-sm-6 flex-column d-flex"> <label class="m form-control-label px-3"> Name<span class="text-danger"> *</span></label> <input type="text" id="nom" name="nom" placeholder="Enter your first nom" formControlName="nom"> </div>
@@ -120,6 +267,7 @@
 </div>
 
 </div></form></div>
+</div></div></div></div></div></body></html>
 
 
 
