--- a/frontend/src/app/components/docteur/dashboard/dashboard.component.html
+++ b/frontend/src/app/components/docteur/dashboard/dashboard.component.html
@@ -46,32 +46,16 @@
                   </ul>
               </li>
               <li class="nav-item pcoded-hasmenu">
-                <a href="/admin/recl" class="nav-link "><span>
+                <a href="admin/listapp" class="nav-link "><span>
                    <img src="/assets/icons/rendez.png" class="icon"></span>
                    <span class="pcoded-mtext mx-2"> Rendez-vous</span></a>
                 <ul class="pcoded-submenu">
                     <li><a href="admin/listapp" target="_blank">Consulter les rendez-vous</a></li>
                 </ul>
-              <li class="nav-item pcoded-hasmenu">
-                <a href="/admin/listP" class="nav-link "><span>
-                   <img src="assets/icons/medica.png"  class="icon" ></span>
-                   <span class="pcoded-mtext mx-2"> Médicaments</span></a>
-                <ul class="pcoded-submenu">
-                    <li><a href="admin/listP" target="_blank">Liste des médicaments</a></li>
-                </ul>
-            </li>
-            <li class="nav-item pcoded-hasmenu">
-                <a href="/admin/listP" class="nav-link "><span>
-                   <img src="/assets/icons/analysee.png" class="icon"></span>
-                   <span class="pcoded-mtext mx-2"> Analyses</span></a>
-                <ul class="pcoded-submenu">
-                    <li><a href="admin/listP" target="_blank">Liste des analyses</a></li>
-                </ul>
-            </li>
         <li class="nav-item pcoded-hasmenu">
-            <a href="/admin/listR" class="nav-link "><span>
+            <a href="admin/listR" class="nav-link "><span>
                 <img src="/assets/icons/msg.png" class="icon"></span>
-               <span class="pcoded-mtext mx-2"> Réclamations</span></a>
+               <span class="pcoded-mtext mx-2"> Messages</span></a>
             <ul class="pcoded-submenu">
                 <li><a href="admin/listR" target="_blank">Consulter les réclamations</a></li>
             </ul>
