--- a/frontend/src/app/components/docteur/list-patientes/list-patientes.component.html
+++ b/frontend/src/app/components/docteur/list-patientes/list-patientes.component.html
@@ -18,7 +18,7 @@
 <body style=" background: linear-gradient(80deg, rgba(240,111,167,1) 3%, rgba(130,177,233,1) 100%);" >
 	<!-- [ navigation menu ] start -->
     <nav class="pcoded-navbar" style="background:linear-gradient(80deg, rgba(130,177,233,1) 0%, rgba(240,111,167,1) 100%)">	
-		<div class="navbar-wrapper  ">
+        	<div class="navbar-wrapper  ">
 			<div class="navbar-content scroll-div " >
 				<div >
 					<div class="main-menu-header">
@@ -34,50 +34,34 @@
 					<li class="nav-item">
 					    <a href="admin/dashboard" class="nav-link "><span>
                       <img src="/assets/icons/home.png" class="icon"></span>
-                      <span class="pcoded-mtext">Tableau de bord</span></a>
+                      <span class="pcoded-mtext mx-2">Tableau de bord</span></a>
 					</li>
                     
                <li class="nav-item pcoded-hasmenu">
                   <a href="/admin/listP" class="nav-link "><span>
                      <img src="/assets/icons/woman.png"  class="icon"></span>
-                     <span class="pcoded-mtext"> patientes</span></a>
+                     <span class="pcoded-mtext mx-2"> Patientes</span></a>
                   <ul class="pcoded-submenu">
-                      <li><a href="admin/listP" target="_blank mx-2">Liste des patientes</a></li>
+                      <li><a href="admin/listP" target="_blank">Liste des patientes</a></li>
                   </ul>
               </li>
               <li class="nav-item pcoded-hasmenu">
-                <a href="/admin/recl" class="nav-link "><span>
+                <a href="admin/listapp" class="nav-link "><span>
                    <img src="/assets/icons/rendez.png" class="icon"></span>
-                   <span class="pcoded-mtext"> rendez-vous</span></a>
+                   <span class="pcoded-mtext mx-2"> Rendez-vous</span></a>
                 <ul class="pcoded-submenu">
-                    <li><a href="admin/recl" target="_blank mx-2"> Rendez-vous</a></li>
+                    <li><a href="admin/listapp" target="_blank">Consulter les rendez-vous</a></li>
                 </ul>
-              <li class="nav-item pcoded-hasmenu">
-                <a href="/admin/listP" class="nav-link "><span>
-                   <img src="assets/icons/medica.png"  class="icon" ></span>
-                   <span class="pcoded-mtext"> médicaments</span></a>
-                <ul class="pcoded-submenu">
-                    <li><a href="admin/listP" target="_blank mx-2">Liste des médicaments</a></li>
-                </ul>
-            </li>
-            <li class="nav-item pcoded-hasmenu">
-                <a href="/admin/listP" class="nav-link "><span>
-                   <img src="/assets/icons/analysee.png" class="icon"></span>
-                   <span class="pcoded-mtext"> Analyses</span></a>
-                <ul class="pcoded-submenu">
-                    <li><a href="admin/listP" target="_blank">Liste des analyses</a></li>
-                </ul>
-            </li>
         <li class="nav-item pcoded-hasmenu">
-            <a href="/admin/recl" class="nav-link "><span>
+            <a href="admin/listR" class="nav-link "><span>
                 <img src="/assets/icons/msg.png" class="icon"></span>
-               <span class="pcoded-mtext"> Messages</span></a>
+               <span class="pcoded-mtext mx-2"> Messages</span></a>
             <ul class="pcoded-submenu">
-                <li><a href="admin/recl" target="_blank mx-2"> Messages</a></li>
+                <li><a href="admin/listR" target="_blank">Consulter les réclamations</a></li>
             </ul>
         </li>
         <br><br><br>
-		<li><a href="/login" ><i class="fa fa-sign-out black_color text-bold"></i> 
+		<li><a href="/login" (click)="logOut()"><i class="fa fa-sign-out black_color text-bold"></i> 
 			<span>Déconnexion</span></a></li>		
     </ul>
 			</div>
