--- a/frontend/src/app/components/docteur/ordonnance/ordonnance.component.css
+++ b/frontend/src/app/components/docteur/ordonnance/ordonnance.component.css
@@ -59,3 +59,75 @@ table, th, td {
     font-style: italic;
     font-size: 10pt;
 }
+
+		body {
+			font-family: Arial, sans-serif;
+			margin: 0;
+			padding: 0;
+		}
+		header {
+			background-color: #f1f1f1;
+			padding: 20px;
+			display: flex;
+			flex-direction: column;
+			align-items: center;
+		}
+		.header h1, .header h3 {
+			margin: 0;
+			text-align: center;
+		}
+		main {
+			padding: 20px;
+		}
+		form {
+			max-width: 500px;
+			margin: 0 auto;
+			display: flex;
+			flex-direction: column;
+			align-items: center;
+		}
+		label {
+			display: block;
+			margin-bottom: 10px;
+			font-weight: bold;
+		}
+		input[type="text"], input[type="date"], textarea {
+			padding: 10px;
+			border: 1px solid #ccc;
+			border-radius: 5px;
+			width: 100%;
+			margin-bottom: 20px;
+			box-sizing: border-box;
+            margin-left: 2px;
+		}
+		textarea {
+			height: 150px;
+		}
+		button[type="submit"] {
+			background-color: #4CAF50;
+			color: white;
+			border: none;
+			padding: 10px 20px;
+			border-radius: 5px;
+			cursor: pointer;
+			font-size: 16px;
+			margin-top: 20px;
+		}
+		button[type="submit"]:hover {
+			background-color: #3e8e41;
+		}
+		.footer {
+			background-color: #333;
+			color: #fff;
+			padding: 20px;
+			display: flex;
+			flex-direction: column;
+			align-items: center;
+		}
+		.footer p {
+			margin: 0;
+			text-align: center;
+		}
+		.footer i {
+			margin-right: 5px;
+		}
