--- a/frontend/src/app/components/docteur/ordonnance/ordonnance.component.html
+++ b/frontend/src/app/components/docteur/ordonnance/ordonnance.component.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-EV6zIbtZhN+Z1z4N/v/M/cM9/5ytxa72F5w5MS5ADiLDCfOFmZrtzvIiR43O2QXJ/gY0Ero08HrpLlNxOmJ3w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-
+	
 </head>
 <body>
 	<header class="header">
@@ -20,15 +20,22 @@
 	</header>
 	<main>
 		<form class="form-card" [formGroup]="ordForm" (ngSubmit)="onSubmit()">
-			<h1>Créer carnet de santé pour {{patient.nomP}} {{patient.prenomP}}</h1>
-			<label class="form-control-label px-3">Nom :<span class="text-danger"></span></label> <input type="text" id="date" name="date" placeholder="" formControlName="nom"> 
-			<div class="form-group col-sm-6 flex-column d-flex"> <label class="form-control-label px-3">Prenom :<span class="text-danger"></span></label> <input type="text" id="date" name="date" placeholder="" formControlName="prenom"> </div>	
-						<div class="form-group col-sm-6 flex-column d-flex"> <label class="form-control-label px-3">Date :<span class="text-danger"></span></label> <input type="date" id="date" name="date" placeholder="" formControlName="date"> </div>	
-						<textarea class="form-control form-control-alternative" rows="3" placeholder="Write a large text here ..." formControlName="traitement"></textarea>
-						<button class="formbold-btn " type="submit">
-				Register
-			  </button>
+			<div class="form-group col-sm-6 flex-column d-flex"> <label class="form-control-label px-3">Nabeul, le :<span class="text-danger"></span></label> <input type="date" id="date" name="date" placeholder="" formControlName="date"> </div>	
+			<div style="display: flex; justify-content: space-between;">
+				<div class="form-group col-sm-6 flex-column d-flex">
+					<label class="form-control-label px-3">Nom :<span class="text-danger"></span></label>
+					<input type="text" id="date" name="date" placeholder="" formControlName="nom">
+				</div>
+				<div class="form-group ml col-sm-6 flex-column d-flex mx-2">
+					<label class="form-control-label px-3 mx-2">Prenom :<span class="text-danger"></span></label>
+					<input type="text" id="date" name="date" placeholder="" formControlName="prenom">
+				</div>
+			</div>
 				
+			<textarea class="form-control form-control-alternative" rows="3" placeholder="Write a large text here ..." formControlName="traitement"></textarea>
+			<button class="formbold-btn " type="submit">
+				Register
+			</button>
 		</form>
 	</main>
 	<footer class="footer">
