--- a/frontend/src/app/components/reclamation-list/reclamation-list.component.html
+++ b/frontend/src/app/components/reclamation-list/reclamation-list.component.html
@@ -18,7 +18,7 @@
 <body style=" background: linear-gradient(80deg, rgba(240,111,167,1) 3%, rgba(130,177,233,1) 100%);" >
 	<!-- [ navigation menu ] start -->
     <nav class="pcoded-navbar" style="background:linear-gradient(80deg, rgba(130,177,233,1) 0%, rgba(240,111,167,1) 100%)">	
-		<div class="navbar-wrapper  ">
+        	<div class="navbar-wrapper  ">
 			<div class="navbar-content scroll-div " >
 				<div >
 					<div class="main-menu-header">
@@ -34,7 +34,7 @@
 					<li class="nav-item">
 					    <a href="admin/dashboard" class="nav-link "><span>
                       <img src="/assets/icons/home.png" class="icon"></span>
-                      <span class="pcoded-mtext"> Tableau de bord</span></a>
+                      <span class="pcoded-mtext mx-2">Tableau de bord</span></a>
 					</li>
                     
                <li class="nav-item pcoded-hasmenu">
@@ -46,38 +46,22 @@
                   </ul>
               </li>
               <li class="nav-item pcoded-hasmenu">
-                <a href="/admin/recl" class="nav-link "><span>
+                <a href="admin/listapp" class="nav-link "><span>
                    <img src="/assets/icons/rendez.png" class="icon"></span>
                    <span class="pcoded-mtext mx-2"> Rendez-vous</span></a>
                 <ul class="pcoded-submenu">
-                    <li><a href="admin/recl" target="_blank">Consulter les rendez-vous</a></li>
+                    <li><a href="admin/listapp" target="_blank">Consulter les rendez-vous</a></li>
                 </ul>
-              <li class="nav-item pcoded-hasmenu">
-                <a href="/admin/listP" class="nav-link "><span>
-                   <img src="assets/icons/medica.png"  class="icon" ></span>
-                   <span class="pcoded-mtext mx-2"> Médicaments</span></a>
-                <ul class="pcoded-submenu">
-                    <li><a href="admin/listP" target="_blank">Liste des médicaments</a></li>
-                </ul>
-            </li>
-            <li class="nav-item pcoded-hasmenu">
-                <a href="/admin/listP" class="nav-link "><span>
-                   <img src="/assets/icons/analysee.png" class="icon"></span>
-                   <span class="pcoded-mtext mx-2"> Analyses</span></a>
-                <ul class="pcoded-submenu">
-                    <li><a href="admin/listP" target="_blank">Liste des analyses</a></li>
-                </ul>
-            </li>
         <li class="nav-item pcoded-hasmenu">
-            <a href="/admin/recl" class="nav-link "><span>
+            <a href="admin/listR" class="nav-link "><span>
                 <img src="/assets/icons/msg.png" class="icon"></span>
-               <span class="pcoded-mtext mx-2"> Réclamations</span></a>
+               <span class="pcoded-mtext mx-2"> Messages</span></a>
             <ul class="pcoded-submenu">
-                <li><a href="admin/recl" target="_blank">Consulter les réclamations</a></li>
+                <li><a href="admin/listR" target="_blank">Consulter les réclamations</a></li>
             </ul>
         </li>
         <br><br><br>
-		<li><a href="/login" ><i class="fa fa-sign-out black_color text-bold"></i> 
+		<li><a href="/login" (click)="logOut()"><i class="fa fa-sign-out black_color text-bold"></i> 
 			<span>Déconnexion</span></a></li>		
     </ul>
 			</div>
@@ -124,7 +108,7 @@
 						</li>&nbsp;&nbsp;&nbsp;
 						<li>
 							<div class="dropdown drp-user">
-								<a href="/login"  id="logout"
+								<a href="/login" (click)="logOut()" id="logout"
                                      class="dropdown-toggle" data-toggle="dropdown">
 									<i class="feather icon-log-out"></i>
 								</a>
@@ -148,12 +132,12 @@
                 <div class="row align-items-center">
                     <div class="col-md-12">
                         <div class="page-header-title">
-                            <h5 class="m-b-10">Réclamations</h5>
+                            <h5 class="m-b-10">Messages</h5>
                         </div>
                         <ul class="breadcrumb">
                             <li class="breadcrumb-item"><a href="/admin/dashboard"><i class="feather icon-home"></i></a></li>
-                            <li class="breadcrumb-item"><a href="/admin/listP mx-2"> réclamations</a></li>
-                            <li class="breadcrumb-item"><a href="/admin/listP">Réclamations</a></li>
+                            <li class="breadcrumb-item"><a href="/admin/listP mx-2"> Messages</a></li>
+                            <li class="breadcrumb-item"><a href="/admin/listP">Messages</a></li>
                         </ul>
                     </div>
                 </div>
@@ -164,7 +148,7 @@
 		<div class="col-xl-12">
 			<div class="container p-3 my-3 border cont">
 				<div class="form-group mb-4">
-				   <div class="card-header col-lg-12"><h1 class="text-center text">Listes des Réclamations</h1></div>
+				   <div class="card-header col-lg-12"><h1 class="text-center text">Listes des Messages</h1></div>
 				   <input id="exampleFormControlInput2" type="text" placeholder="Chercher ...?"
 				     class="form-control form-control-underlined">
 				 </div><br>
@@ -174,9 +158,10 @@
 				   <thead class="bg countour border text-bold">
 					 <tr>
 					   <th>Nom</th>
+					   <th>Prenom</th>
 					   <th>Email</th>
-					   <th>Subjet</th>
-					   <th>Contenu de réclamation</th>
+					   <th>Sujet</th>
+					   <th>Contenu de Message</th>
 					   <th>Actions</th>
 					   <th></th>
 					 </tr>
@@ -184,6 +169,7 @@
 				   <tbody *ngFor="let message of messages" >
 					 <tr>
 						<td><p class="fw-normal mb-1">{{ message.nom}}</p></td>
+						<td><p class="fw-normal mb-1">{{ message.prenom}}</p></td>
 						<td><a class="text-decoration-none text-body px-2" href="mailto: {{ message.email}}">{{message.email}}</a></td>
 					   <td><p class="fw-normal mb-1">{{ message.subject}}</p></td>
                        <td><p class="fw-normal mb-1">{{ message.mess}}</p></td>
