--- a/frontend/src/app/components/docteur/dashboard/dashboard.component.html
+++ b/frontend/src/app/components/docteur/dashboard/dashboard.component.html
@@ -224,7 +224,7 @@
                         <div class="card-body">
                             <div class="row align-items-center">
                                 <div class="col-md-8">
-                                    <h1 class="text-c-green color">{{ nbrAr}}</h1>
+                                    <h1 class="text-c-green color"></h1>
                                     <h3 class="text-muted m-b-0">Articles</h3>
                                 </div>
                                 <div class="col-4 text-right ">
