--- a/frontend/src/app/components/footer/footer.component.html
+++ b/frontend/src/app/components/footer/footer.component.html
@@ -12,33 +12,31 @@
           </p>
         </div>
         <div class="col-sm">
-          <h3>Customers</h3>
+          <h3>Accueil</h3>
           <ul class="list-unstyled links">
-            <li><a href="#">Buyer</a></li>
-            <li><a href="#">Supplier</a></li>
+            <li><a href="/about">A propos </a></li>
+            <li><a href="/service">Services</a></li>
           </ul>
         </div>
         <div class="col-sm">
-          <h3>Company</h3>
+          <h3>Appointment</h3>
           <ul class="list-unstyled links">
-            <li><a href="#">About us</a></li>
-            <li><a href="#">Careers</a></li>
-            <li><a href="#">Contact us</a></li>
+            <li><a href="/appointment">prenez un rendez-vous</a></li>
           </ul>
         </div>
         <div class="col-sm">
-          <h3>Further Information</h3>
+          <h3>Contact</h3>
           <ul class="list-unstyled links">
-            <li><a href="#">Terms &amp; Conditions</a></li>
-            <li><a href="#">Privacy Policy</a></li>
+            <li><a href="/contact">Envoyer un message</a></li>
+            <li><a href="/contact">Localisation</a></li>
           </ul>
         </div>
         <div class="col-md-3">
-          <h3>Follow us</h3>
-          <ul class="list-unstyled social ">
-            <li><a href="#"><span class="icon-facebook"></span></a></li>
-            <li><a href="#"><span class="icon-medium"></span></a></li>
-            <li><a href="#"><span class="icon-paper-plane"></span></a></li>
+          <h3 class="mx-2">Follow us</h3>
+          <ul class="list-unstyled social">
+            <li class="mx-2"><a href="https://www.facebook.com/Cabinet-de-gyn%C3%A9cologie-obst%C3%A9trique-Dr-Machat-Nesrine-Ep-Khalfallah-113038777286823"><span class="icon-facebook"></span></a></li>
+            <li class="mx-2"><a href="https://www.instagram.com/nesrine_machat_ep_khalfallah_/"><span class="fab fa-instagram" ></span></a></li>
+            <li class="mx-2"><a href="mailto:machatnesrine081178@gmail.com"><span class="bi bi-envelope me-2"></span></a></li>
           </ul>
         </div>
         
