--- a/frontend/src/app/components/navbar/navbar.component.html
+++ b/frontend/src/app/components/navbar/navbar.component.html
@@ -37,7 +37,7 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <div class="navbar-nav ms-auto py-0">
-                    <a href="/home" class="nav-item nav-link active">Accueil</a>
+                    <a href="/home" class="nav-item nav-link ">Accueil</a>
                     <a href="/about" class="nav-item nav-link">A Propos</a>
                     <a href="/service" class="nav-item nav-link">Services</a>
                     <div class="nav-item dropdown">
@@ -47,6 +47,7 @@
                         </div>
                     </div>
                     <a href="/contact" class="nav-item nav-link">Contact</a>
+                    <a href="/login" class="nav-item nav-link">Se connecter</a>
                 </div>
             </div>
         </nav>
