--- a/frontend/src/app/components/docteur/add-eco/add-eco.component.html
+++ b/frontend/src/app/components/docteur/add-eco/add-eco.component.html
@@ -132,53 +132,44 @@
 				   
 				 </div><br>
 				<!-- table section -->
-			   
-				<div class="container mt-4">
-          <h1>Ajout d'échographie</h1>
-          <form [formGroup]="ecoForm" (ngSubmit)="onSubmit()">
-            <div class="form-group">
-              <label for="title">Title:</label>
-              <input type="text" class="form-control" id="title" formControlName="title" required>
-            </div>
-            <div class="form-group">
-                <label for="description">description:</label>
-                <textarea class="form-control" id="description" formControlName="description" required></textarea>
-              </div>
-            <div class="form-group">
-              <label for="content">Content:</label>
-              <textarea class="form-control" id="content" formControlName="content" required></textarea>
-            </div>
-            <div class="form-group">
-              <label for="dicom">Echographie</label>
-              <input type="file" class="form-control-file" id="dicom" (change)="onFileSelected($event)">
-            </div>
-            <button type="submit" class="btn btn-primary mr-1">Save</button>
-            <button type="button" class="btn btn-primary" *ngIf="isEditMode" (click)="onCancel()">Cancel</button>
-          </form>
-          <hr>
-          <div class="row">
-            <h1>Liste des echographies </h1>
-            <div class="col-md-6 mb-3" *ngFor="let eco of eco">
-              <div class="card">
-                <div class="card-body">
-                  <h5 class="card-title">{{eco.title }}</h5>
-                  <p class="card-text">{{eco.description}}</p>
-                  <p class="card-text">{{eco.content }}</p>
-                  <canvas id="dicomCanvas"  width="512" height="512"></canvas>
-                  <button type="button" class="btn btn-primary mr-1" (click)="onEdit(eco)">Edit</button>
-                  <button type="button" class="btn btn-danger" (click)="onDelete(eco)">Delete</button>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-                
-			</div>
-</div>
-
-        <!-- [ Main Content ] end -->
-    </div>
-</section>
-
-
-
+                <div class="container mt-4">
+                    <h1>Ajout d'échographie</h1>
+                    <form [formGroup]="ecoForm" (ngSubmit)="onSubmit()">
+                      <div class="form-group">
+                        <input type="text" class="form-control" id="title" formControlName="title" required style=" display: none;">
+                        <label for="title">Title:</label>
+                        <input type="text" class="form-control" id="title" formControlName="title" required>
+                      </div>
+                      <div class="form-group">
+                        <label for="description">Description:</label>
+                        <textarea class="form-control" id="description" formControlName="description" required></textarea>
+                      </div>
+                      <div class="form-group">
+                        <label for="content">Content:</label>
+                        <textarea class="form-control" id="content" formControlName="content" required></textarea>
+                      </div>
+                      <div class="form-group">
+                        <label for="dicom">Echographie</label>
+                        <input type="file" class="form-control-file" id="dicom" (change)="onFileSelected($event)">
+                      </div>
+                      <button type="submit" class="btn btn-primary mr-1">Save</button>
+                      <button type="button" class="btn btn-primary" *ngIf="isEditMode" (click)="onCancel()">Cancel</button>
+                    </form>
+                    <hr>
+                    <div class="row">
+                      <h1>Liste des echographies</h1>
+                      <div class="col-md-6 mb-3" *ngFor="let ecoItem of eco">
+                        <div class="card">
+                          <div class="card-body">
+                            <h5 class="card-title">{{ ecoItem.title }}</h5>
+                            <p class="card-text">{{ ecoItem.description }}</p>
+                            <p class="card-text">{{ ecoItem.content }}</p>
+                            <canvas id="dicomCanvas" width="512" height="512"></canvas>
+                            <button type="button" class="btn btn-primary mr-1" (click)="onEdit(ecoItem)">Edit</button>
+                            <button type="button" class="btn btn-danger" (click)="onDelete(ecoItem)">Delete</button>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  
