--- a/frontend/src/app/components/docteur/ordonnance/ordonnance.component.html
+++ b/frontend/src/app/components/docteur/ordonnance/ordonnance.component.html
@@ -20,6 +20,7 @@
 	</header>
 	<main>
 		<form class="form-card" [formGroup]="ordForm" (ngSubmit)="onSubmit()">
+			<input type="date" id="date" name="date" placeholder="" formControlName="date" style="  display: none;" >
 			<div class="form-group col-sm-6 flex-column d-flex"> <label class="form-control-label px-3">Nabeul, le :<span class="text-danger"></span></label> <input type="date" id="date" name="date" placeholder="" formControlName="date"> </div>	
 			<div style="display: flex; justify-content: space-between;">
 				<div class="form-group col-sm-6 flex-column d-flex">
