--- a/frontend/src/app/components/docteur/sms/sms.component.html
+++ b/frontend/src/app/components/docteur/sms/sms.component.html
@@ -1,5 +1,6 @@
+<input type="text" id="date" name="date" placeholder="" formControlName="nomP" style="  display: none;" >
 <form class="form-card" [formGroup]="SmsForm" (ngSubmit)="onSubmit()">	
-    <div class="form-group col-sm-6 flex-column d-flex"> <label class="form-control-label px-3">Date de naissance : <span class="text-danger"></span></label> <input type="date" id="date" name="date" placeholder="" formControlName="naissance"> </div>	
+    <div class="form-group col-sm-6 flex-column d-flex"> <label class="form-control-label px-3">Num tel:<span class="text-danger"></span></label> <input type="text" id="date" name="tel" formControlName="numt"> </div>	
     <div style="display: flex; justify-content: space-between;">
         <div class="form-group col-sm-6 flex-column d-flex">
             <label class="form-control-label px-3">Nom :<span class="text-danger"></span></label>
@@ -10,9 +11,12 @@
             <input type="text" id="date" name="date" placeholder="" formControlName="prenom">
         </div>
     </div>
-        
     <textarea class="form-control form-control-alternative" rows="3" placeholder="Write a large text here ..." formControlName="messageBody"></textarea>
-    <button class="formbold-btn " type="submit">
+    <div>
+    <button class="formbold-btn " type="submit" class="mx-5" >
        Envoyer
     </button>
+    <button class="formbold-btn " type="reset"  routerLink="/admin/listapp">
+        Annuler 
+     </button></div>
 </form>
